system_tests/type_error/type_error.glc
fn foo(int bar) -> int {
  return bar;
}

fn main() -> void {
  let x = "blah";
  foo(x);
  print(1);
}